{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 162,
  "lineage": "725e85b3-a337-a5fe-f01a-14fdae996194",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e40f79ed74eacfe1",
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:elastic-ip/eipalloc-0e40f79ed74eacfe1",
            "association_id": "eipassoc-021813eb160c66673",
            "domain": "vpc",
            "id": "eipalloc-0e40f79ed74eacfe1",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0e80223b7bae204c9",
            "private_dns": "ip-10-0-1-28.ap-northeast-1.compute.internal",
            "private_ip": "10.0.1.28",
            "public_dns": "ec2-52-193-255-90.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "52.193.255.90",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "agri-iot-nat-eip"
            },
            "tags_all": {
              "Name": "agri-iot-nat-eip"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:internet-gateway/igw-0947f5b1568f4c4ba",
            "id": "igw-0947f5b1568f4c4ba",
            "owner_id": "440707461121",
            "tags": {
              "Name": "agri-iot-igw"
            },
            "tags_all": {
              "Name": "agri-iot-igw"
            },
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:loadbalancer/app/agri-iot-alb/6e3ac8439d971e2b",
            "arn_suffix": "app/agri-iot-alb/6e3ac8439d971e2b",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "agri-iot-alb-1112589158.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": true,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:loadbalancer/app/agri-iot-alb/6e3ac8439d971e2b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "agri-iot-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-058026e44234fb353"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0926313968e39b38f"
              },
              {
                "subnet_id": "subnet-0c62025a20dc677de"
              }
            ],
            "subnets": [
              "subnet-0926313968e39b38f",
              "subnet-0c62025a20dc677de"
            ],
            "tags": {
              "Name": "agri-iot-alb"
            },
            "tags_all": {
              "Name": "agri-iot-alb"
            },
            "vpc_id": "vpc-08f1478c4dc487628",
            "xff_header_processing_mode": "append",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:listener/app/agri-iot-alb/6e3ac8439d971e2b/c48671efafab83c9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:targetgroup/agri-iot-tg/beef9fb3d81434d7",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:listener/app/agri-iot-alb/6e3ac8439d971e2b/c48671efafab83c9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:loadbalancer/app/agri-iot-alb/6e3ac8439d971e2b",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.main",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:targetgroup/agri-iot-tg/beef9fb3d81434d7",
            "arn_suffix": "targetgroup/agri-iot-tg/beef9fb3d81434d7",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:targetgroup/agri-iot-tg/beef9fb3d81434d7",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:ap-northeast-1:440707461121:loadbalancer/app/agri-iot-alb/6e3ac8439d971e2b"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "agri-iot-tg",
            "port": 8000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "agri-iot-tg"
            },
            "tags_all": {
              "Name": "agri-iot-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e40f79ed74eacfe1",
            "association_id": "eipassoc-021813eb160c66673",
            "connectivity_type": "public",
            "id": "nat-00c82bec125dcd801",
            "network_interface_id": "eni-0e80223b7bae204c9",
            "private_ip": "10.0.1.28",
            "public_ip": "52.193.255.90",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0926313968e39b38f",
            "tags": {
              "Name": "agri-iot-nat-gateway"
            },
            "tags_all": {
              "Name": "agri-iot-nat-gateway"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:route-table/rtb-0cc77174517737044",
            "id": "rtb-0cc77174517737044",
            "owner_id": "440707461121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-00c82bec125dcd801",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "agri-iot-private-rt"
            },
            "tags_all": {
              "Name": "agri-iot-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:route-table/rtb-0eade50ecd5bd3d79",
            "id": "rtb-0eade50ecd5bd3d79",
            "owner_id": "440707461121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0947f5b1568f4c4ba",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "agri-iot-public-rt"
            },
            "tags_all": {
              "Name": "agri-iot-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1c92658574423b2",
            "route_table_id": "rtb-0cc77174517737044",
            "subnet_id": "subnet-0d4b840ab2cb960cc"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05d75721c9d29ad05",
            "route_table_id": "rtb-0cc77174517737044",
            "subnet_id": "subnet-07f1679b81428c248"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08439bbd52294c6eb",
            "route_table_id": "rtb-0eade50ecd5bd3d79",
            "subnet_id": "subnet-0926313968e39b38f"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0aba2a22d4ba63b19",
            "route_table_id": "rtb-0eade50ecd5bd3d79",
            "subnet_id": "subnet-0c62025a20dc677de"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:security-group/sg-058026e44234fb353",
            "description": "ALB Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-058026e44234fb353",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "agri-iot-alb-sg",
            "name_prefix": "",
            "owner_id": "440707461121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "agri-iot-alb-sg"
            },
            "tags_all": {
              "Name": "agri-iot-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:security-group/sg-0bbb9d9bb97efe755",
            "description": "ECS Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0bbb9d9bb97efe755",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-058026e44234fb353"
                ],
                "self": false,
                "to_port": 8000
              }
            ],
            "name": "agri-iot-ecs-sg",
            "name_prefix": "",
            "owner_id": "440707461121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "agri-iot-ecs-sg"
            },
            "tags_all": {
              "Name": "agri-iot-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:security-group/sg-0e72fe30a0f33dbd8",
            "description": "RDS Security Group",
            "egress": [],
            "id": "sg-0e72fe30a0f33dbd8",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0bbb9d9bb97efe755"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "agri-iot-rds-sg",
            "name_prefix": "",
            "owner_id": "440707461121",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "agri-iot-rds-sg"
            },
            "tags_all": {
              "Name": "agri-iot-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:subnet/subnet-0d4b840ab2cb960cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d4b840ab2cb960cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440707461121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agri-iot-private-subnet-1"
            },
            "tags_all": {
              "Name": "agri-iot-private-subnet-1"
            },
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:subnet/subnet-07f1679b81428c248",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07f1679b81428c248",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "440707461121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agri-iot-private-subnet-2"
            },
            "tags_all": {
              "Name": "agri-iot-private-subnet-2"
            },
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:subnet/subnet-0926313968e39b38f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0926313968e39b38f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440707461121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agri-iot-public-subnet-1"
            },
            "tags_all": {
              "Name": "agri-iot-public-subnet-1"
            },
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:subnet/subnet-0c62025a20dc677de",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c62025a20dc677de",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "440707461121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "agri-iot-public-subnet-2"
            },
            "tags_all": {
              "Name": "agri-iot-public-subnet-2"
            },
            "vpc_id": "vpc-08f1478c4dc487628"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:440707461121:vpc/vpc-08f1478c4dc487628",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-092c2e21d24fdb469",
            "default_route_table_id": "rtb-0c2aa0843c42db797",
            "default_security_group_id": "sg-0771f5084fc01cccc",
            "dhcp_options_id": "dopt-ce7a9da8",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08f1478c4dc487628",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c2aa0843c42db797",
            "owner_id": "440707461121",
            "tags": {
              "Name": "agri-iot-vpc"
            },
            "tags_all": {
              "Name": "agri-iot-vpc"
            }
          }
        }
      ]
    }
  ]
}